--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://thc.org/segfault/</title\>
+<title>Redirecting to https://thc.org/segfault/</title>
 <meta http-equiv="refresh" content="0; URL=https://thc.org/segfault/">
 <link rel="canonical" href="https://thc.org/segfault/">
